@@ -200,11 +200,11 @@ define([
 					name: 'maxMem',
 					type: MappedTextBox,
 					required: true,
-					constraints: {min: 4*1024*1024},
+					constraints: {min: 4*1024*1024, max: 4*1024*1024*1024*1024},  // 4 MiB .. 4 TiB
 					format: types.prettyCapacity,
 					parse: types.parseCapacity,
 					validator: function(value, constraints) {
-						var size = types.parseCapacity(value);
+						var size = types.parseCapacity(value, 'M');
 						if (size === null) {
 							return false;
 						}
@@ -216,8 +216,8 @@ define([
 						}
 						return true;
 					},
-					invalidMessage: _('The memory size is invalid (e.g. 3GB or 1024 MB), minimum 4 MB'),
-					label: _('Memory')
+					invalidMessage: _('The memory size is invalid (e.g. 3GB or 1024 MB), minimum 4 MB, maximum 4 TB'),
+					label: _('Memory (default unit MB)')
 				}, {
 					name: 'boot_hvm',
 					type: MultiInput,
